--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
                         <a href="./portfolio/eot-camp-director.html">
                             <div class="overlay">
                                 <div class="overlay-infos">
-                                    <h5>EOT Camp Director Portfolio</h5>
+                                    <h5>EOT Camp Director App</h5>
                                 </div>
                             </div>
                         </a>
@@ -250,7 +250,7 @@
                         <a href="./portfolio/eot-staff.html">
                             <div class="overlay">
                                 <div class="overlay-infos">
-                                    <h5>EOT Staff Portfolio</h5>
+                                    <h5>EOT Staff Portfolio App</h5>
                                 </div>
                             </div>
                         </a>
@@ -262,7 +262,7 @@
                         <a href="./portfolio/lb-hire-designers.html">
                             <div class="overlay">
                                 <div class="overlay-infos">
-                                    <h5>Little Brahma Hire Designers </h5>
+                                    <h5>Little Brahma Hire Designers App</h5>
                                 </div>
                             </div>
                         </a>
@@ -270,117 +270,180 @@
                 </div>
             </div>
 
-            <div class="row">
-                <div class="col-md-4">
-                    <div class="img-wrapper grid-item">
-                        <img src="./assets/image/portfolio/pf_4.png" alt="">
-                        <!-- <div class="overlay">
-                            <div class="overlay-infos">
-                                <h5>Project Title</h5>
-                                <a href="./portfolio/project_1.html">
-                                    <div class="icon more-icon">&#8943;</div></i>
-                                </a>
-                            </div>
-                        </div> -->
+            <section id="visible-section">
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="img-wrapper grid-item">
+                            <a onclick="navigateTo('contact')" href="#contact">
+                                <img src="./assets/image/portfolio/pf_4.png" alt="">
+                            </a>
+                        </div>
                     </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="img-wrapper grid-item">
-                        <img src="./assets/image/portfolio/pf_5.png" alt="">
-                        <!-- <div class="overlay">
-                            <div class="overlay-infos">
-                                <h5>Project Title</h5>
-                                <a href="./portfolio/project_1.html">
-                                    <div class="icon more-icon">&#8943;</div></i>
-                                </a>
-                            </div>
-                        </div> -->
+                    <div class="col-md-4">
+                        <div class="img-wrapper grid-item">
+                            <a onclick="navigateTo('contact')" href="#contact">
+                                <img src="./assets/image/portfolio/pf_5.png" alt="">
+                            </a>
+                        </div>
                     </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="img-wrapper grid-item">
-                        <img src="./assets/image/portfolio/pf_6.png" alt="">
-                        <!-- <div class="overlay">
-                            <div class="overlay-infos">
-                                <h5>Project Title</h5>
-                                <a href="./portfolio/project_1.html">
-                                    <div class="icon more-icon">&#8943;</div></i>
-                                </a>
-                            </div>
-                        </div> -->
-                    </div>
-                </div>
-            </div>
+                    <div class="col-md-4">
+                        <div class="img-wrapper grid-item">
+                            <a onclick="navigateTo('contact')" href="#contact">
+                                <img src="./assets/image/portfolio/pf_6.png" alt="">
+                            </a>
+                           
 
-            <div class="row">
-                <div class="col-md-4">
-                    <div class="img-wrapper grid-item">
-                        <img src="./assets/image/portfolio/pf_7.png" alt="">
-                        <!-- <div class="overlay">
-                            <div class="overlay-infos">
-                                <h5>Project Title</h5>
-                                <a href="./portfolio/project_1.html">
-                                    <div class="icon more-icon">&#8943;</div></i>
-                                </a>
-                            </div>
-                        </div> -->
+                        </div>
                     </div>
                 </div>
-                <div class="col-md-4">
-                    <div class="img-wrapper grid-item">
-                        <img src="./assets/image/portfolio/pf_8.png" alt="">
-                        <!-- <div class="overlay">
-                            <div class="overlay-infos">
-                                <h5>Project Title</h5>
-                                <a href="./portfolio/project_1.html">
-                                    <div class="icon more-icon">&#8943;</div></i>
-                                </a>
-                            </div>
-                        </div> -->
+
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="img-wrapper grid-item">
+                            <a onclick="navigateTo('contact')" href="#contact">
+                                <img src="./assets/image/portfolio/pf_7.png" alt="">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="img-wrapper grid-item">
+                            <a onclick="navigateTo('contact')" href="#contact">
+                                <img src="./assets/image/portfolio/pf_8.png" alt="">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="img-wrapper grid-item">
+                            <a onclick="navigateTo('contact')" href="#contact">
+                                <img src="./assets/image/portfolio/pf_9.png" alt="">
+                            </a>
+                        </div>
                     </div>
                 </div>
-                <div class="col-md-4">
-                    <div class="img-wrapper grid-item">
-                        <img src="./assets/image/portfolio/pf_9.png" alt="">
-                        <!-- <div class="overlay">
-                            <div class="overlay-infos">
-                                <h5>Project Title</h5>
-                                <a href="./portfolio/project_1.html">
-                                    <div class="icon more-icon">&#8943;</div></i>
-                                </a>
-                            </div>
-                        </div> -->
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="img-wrapper grid-item">
+                            <a onclick="navigateTo('contact')" href="#contact">
+                                <img src="./assets/image/portfolio/pf_10.png" alt="">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="img-wrapper grid-item">
+                            <a onclick="navigateTo('contact')" href="#contact">
+                                <img src="./assets/image/portfolio/pf_11.png" alt="">
+                            </a>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-md-4">
-                    <div class="img-wrapper grid-item">
-                        <img src="./assets/image/portfolio/pf_10.png" alt="">
-                        <!-- <div class="overlay">
-                            <div class="overlay-infos">
-                                <h5>Project Title</h5>
-                                <a href="./portfolio/project_1.html">
-                                    <div class="icon more-icon">&#8943;</div></i>
-                                </a>
-                            </div>
-                        </div> -->
+            </section>
+            <section id="hide-section">
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="img-wrapper ">
+                            <img src="./assets/image/portfolio/pf_4.png" alt="">
+                            <a href="./portfolio/eka.html">
+                                <div class="overlay">
+                                    <div class="overlay-infos">
+                                        <h5>EKA Portfolio App</h5>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="img-wrapper ">
+                            <img src="./assets/image/portfolio/pf_5.png" alt="">
+                            <a href="./portfolio/clear.html">
+                                <div class="overlay">
+                                    <div class="overlay-infos">
+                                        <h5>Clear Subtitle Tool App</h5>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="img-wrapper ">
+                            <img src="./assets/image/portfolio/pf_6.png" alt="">
+                            <a href="./portfolio/alga-energy.html">
+                                <div class="overlay">
+                                    <div class="overlay-infos">
+                                        <h5>Clear Subtitle Tool App</h5>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
                     </div>
                 </div>
-                <div class="col-md-4">
-                    <div class="img-wrapper grid-item">
-                        <img src="./assets/image/portfolio/pf_11.png" alt="">
-                        <!-- <div class="overlay">
-                            <div class="overlay-infos">
-                                <h5>Project Title</h5>
-                                <a href="./portfolio/project_1.html">
-                                    <div class="icon more-icon">&#8943;</div></i>
-                                </a>
-                            </div>
-                        </div> -->
+
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="img-wrapper ">
+                            <img src="./assets/image/portfolio/pf_7.png" alt="">
+                            <a href="./portfolio/pressure-app.html">
+                                <div class="overlay">
+                                    <div class="overlay-infos">
+                                        <h5>Clear Subtitle Tool App</h5>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="img-wrapper ">
+                            <img src="./assets/image/portfolio/pf_8.png" alt="">
+                            <a href="./portfolio/twaddan.html">
+                                <div class="overlay">
+                                    <div class="overlay-infos">
+                                        <h5>Twaddan Car Wash App</h5>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="img-wrapper">
+                            <img src="./assets/image/portfolio/pf_9.png" alt="">
+                            <a href="./portfolio/groom.html">
+                                <div class="overlay">
+                                    <div class="overlay-infos">
+                                        <h5>Groom HR Management App</h5>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
                     </div>
                 </div>
-            </div>
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="img-wrapper ">
+                            <img src="./assets/image/portfolio/pf_10.png" alt="">
+                            <a href="./portfolio/bigmenu.html">
+                                <div class="overlay">
+                                    <div class="overlay-infos">
+                                        <h5>Bigmenu Grocery App</h5>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="img-wrapper ">
+                            <img src="./assets/image/portfolio/pf_11.png" alt="">
+                            <a href="./portfolio/bigmenu.html">
+                                <div class="overlay">
+                                    <div class="overlay-infos">
+                                        <h5>Little Brahma E-Commerce App</h5>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+
 
         </div>
     </section>
