--- a/home/index.html
+++ b/home/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
 
     <!-- Bootstrap + sainu main styles -->
-    <link rel="stylesheet" href="./assets/css/sainu.css">
+    <link rel="stylesheet" href="../assets/css/sainu.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
     <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
@@ -86,7 +86,7 @@
             <!-- about wrapper -->
             <div class="about">
                 <div class="about-img-holder">
-                    <img src="./assets/image/profile2.jpg" class="about-img"
+                    <img src="../assets/image/profile2.jpg" class="about-img"
                         alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
                 </div>
                 <div class="about-caption">
@@ -101,7 +101,7 @@
                     </p>
                     <h6>sainumechpd@gmail.com</h6>
                     <h6>+91 7760540078</h6>
-                    <a href="./assets/image/UX_Sainudheen.pdf" download="sainu_resume" class=""><button
+                    <a href="../assets/image/UX_Sainudheen.pdf" download="sainu_resume" class=""><button
                             class="btn-rounded btn btn-outline-primary mt-4">Download CV</button></a>
                 </div>
             </div><!-- end of about wrapper -->
@@ -192,14 +192,14 @@
             <div class="row mb-3">
                 <div class="col-md-6 award-img-div" id="award_1">
                     <a href="#award_1" class="portfolio-card">
-                        <img src="./assets/image/awards/aw-1.png" class="portfolio-card-img"
+                        <img src="../assets/image/awards/aw-1.png" class="portfolio-card-img"
                             alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
 
                     </a>
                 </div>
                 <div class="col-md-6" id="award_2">
                     <a href="#award_2" class="portfolio-card">
-                        <img src="./assets/image/awards/aw-2.png" class="portfolio-card-img"
+                        <img src="../assets/image/awards/aw-2.png" class="portfolio-card-img"
                             alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
 
                     </a>
@@ -209,14 +209,14 @@
             <div class="row">
                 <div class="col-md-6 " id="award_3">
                     <a href="#award_3" class="portfolio-card">
-                        <img src="./assets/image/awards/aw-3.png" class="portfolio-card-img"
+                        <img src="../assets/image/awards/aw-3.png" class="portfolio-card-img"
                             alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
 
                     </a>
                 </div>
                 <div class="col-md-6" id="award_4">
                     <a href="#award_4" class="portfolio-card">
-                        <img src="./assets/image/awards/aw-4.png" class="portfolio-card-img"
+                        <img src="../assets/image/awards/aw-4.png" class="portfolio-card-img"
                             alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
 
                     </a>
@@ -234,8 +234,8 @@
             <div class="row">
                 <div class="col-md-4">
                     <div class="img-wrapper">
-                        <img src="./assets/image/portfolio/pf_2.png" alt="">
-                        <a href="./portfolio/eot-camp-director.html">
+                        <img src="../assets/image/portfolio/pf_2.png" alt="">
+                        <a href="../portfolio/eot-camp-director.html">
                             <div class="overlay">
                                 <div class="overlay-infos">
                                     <h5>EOT Camp Director App</h5>
@@ -246,8 +246,8 @@
                 </div>
                 <div class="col-md-4">
                     <div class="img-wrapper">
-                        <img src="./assets/image/portfolio/pf_3.png" alt="">
-                        <a href="./portfolio/eot-staff.html">
+                        <img src="../assets/image/portfolio/pf_3.png" alt="">
+                        <a href="../portfolio/eot-staff.html">
                             <div class="overlay">
                                 <div class="overlay-infos">
                                     <h5>EOT Staff Portfolio App</h5>
@@ -258,8 +258,8 @@
                 </div>
                 <div class="col-md-4">
                     <div class="img-wrapper">
-                        <img src="./assets/image/portfolio/pf_1.png" alt="">
-                        <a href="./portfolio/lb-hire-designers.html">
+                        <img src="../assets/image/portfolio/pf_1.png" alt="">
+                        <a href="../portfolio/lb-hire-designers.html">
                             <div class="overlay">
                                 <div class="overlay-infos">
                                     <h5>Little Brahma Hire Designers App</h5>
@@ -275,24 +275,22 @@
                     <div class="col-md-4">
                         <div class="img-wrapper grid-item">
                             <a onclick="navigateTo('contact')" href="#contact">
-                                <img src="./assets/image/portfolio/pf_4.png" alt="">
+                                <img src="../assets/image/portfolio/pf_4.png" alt="">
                             </a>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="img-wrapper grid-item">
                             <a onclick="navigateTo('contact')" href="#contact">
-                                <img src="./assets/image/portfolio/pf_5.png" alt="">
+                                <img src="../assets/image/portfolio/pf_5.png" alt="">
                             </a>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="img-wrapper grid-item">
                             <a onclick="navigateTo('contact')" href="#contact">
-                                <img src="./assets/image/portfolio/pf_6.png" alt="">
+                                <img src="../assets/image/portfolio/pf_6.png" alt="">
                             </a>
-                           
-
                         </div>
                     </div>
                 </div>
@@ -301,21 +299,21 @@
                     <div class="col-md-4">
                         <div class="img-wrapper grid-item">
                             <a onclick="navigateTo('contact')" href="#contact">
-                                <img src="./assets/image/portfolio/pf_7.png" alt="">
+                                <img src="../assets/image/portfolio/pf_7.png" alt="">
                             </a>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="img-wrapper grid-item">
                             <a onclick="navigateTo('contact')" href="#contact">
-                                <img src="./assets/image/portfolio/pf_8.png" alt="">
+                                <img src="../assets/image/portfolio/pf_8.png" alt="">
                             </a>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="img-wrapper grid-item">
                             <a onclick="navigateTo('contact')" href="#contact">
-                                <img src="./assets/image/portfolio/pf_9.png" alt="">
+                                <img src="../assets/image/portfolio/pf_9.png" alt="">
                             </a>
                         </div>
                     </div>
@@ -324,14 +322,14 @@
                     <div class="col-md-4">
                         <div class="img-wrapper grid-item">
                             <a onclick="navigateTo('contact')" href="#contact">
-                                <img src="./assets/image/portfolio/pf_10.png" alt="">
+                                <img src="../assets/image/portfolio/pf_10.png" alt="">
                             </a>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="img-wrapper grid-item">
                             <a onclick="navigateTo('contact')" href="#contact">
-                                <img src="./assets/image/portfolio/pf_11.png" alt="">
+                                <img src="../assets/image/portfolio/pf_11.png" alt="">
                             </a>
                         </div>
                     </div>
@@ -486,7 +484,7 @@
                             <div class="col-md-6 mx-auto">
                                 <div class="testimonial-card">
                                     <div class="testimonial-card-img-holder">
-                                        <img src="./assets/image/testmonial/pooja.jpg" class="testimonial-card-img"
+                                        <img src="../assets/image/testmonial/pooja.jpg" class="testimonial-card-img"
                                             alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
                                     </div>
                                     <div class="testimonial-card-body">
@@ -509,7 +507,7 @@
                             <div class="col-md-6 mx-auto">
                                 <div class="testimonial-card">
                                     <div class="testimonial-card-img-holder">
-                                        <img src="./assets/image/testmonial/kartik.jpg" class="testimonial-card-img"
+                                        <img src="../assets/image/testmonial/kartik.jpg" class="testimonial-card-img"
                                             alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
                                     </div>
                                     <div class="testimonial-card-body">
@@ -541,7 +539,7 @@
                             <div class="col-md-7">
                                 <div class="testimonial-card">
                                     <div class="testimonial-card-img-holder">
-                                        <img src="./assets/image/testmonial/parag.jpg" class="testimonial-card-img"
+                                        <img src="../assets/image/testmonial/parag.jpg" class="testimonial-card-img"
                                             alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
                                     </div>
                                     <div class="testimonial-card-body">
@@ -563,7 +561,7 @@
                             <div class="col-md-5">
                                 <div class="testimonial-card">
                                     <div class="testimonial-card-img-holder">
-                                        <img src="./assets/image/testmonial/prosenjith.jpg" class="testimonial-card-img"
+                                        <img src="../assets/image/testmonial/prosenjith.jpg" class="testimonial-card-img"
                                             alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
                                     </div>
                                     <div class="testimonial-card-body">
@@ -592,7 +590,7 @@
                             <div class="col-md-8">
                                 <div class="testimonial-card">
                                     <div class="testimonial-card-img-holder">
-                                        <img src="./assets/image/testmonial/unknown.jpg" class="testimonial-card-img"
+                                        <img src="../assets/image/testmonial/unknown.jpg" class="testimonial-card-img"
                                             alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
                                     </div>
                                     <div class="testimonial-card-body">
@@ -610,7 +608,7 @@
                             <div class="col-md-4 ">
                                 <div class="testimonial-card">
                                     <div class="testimonial-card-img-holder">
-                                        <img src="./assets/image/testmonial/shaji.jpg" class="testimonial-card-img"
+                                        <img src="../assets/image/testmonial/shaji.jpg" class="testimonial-card-img"
                                             alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
                                     </div>
                                     <div class="testimonial-card-body">
@@ -648,31 +646,31 @@
             <div class="container">
                 <div class="owl-carousel" id="owl-carousel">
                     <div class="item">
-                        <img class="img-fluid" src="./assets/image/clients/cl_1.png" alt="brand-image" />
+                        <img class="img-fluid" src="../assets/image/clients/cl_1.png" alt="brand-image" />
                     </div><!--/.item-->
                     <div class="item">
-                        <img src="assets/image/clients/cl_2.png" alt="brand-image" />
+                        <img src="../assets/image/clients/cl_2.png" alt="brand-image" />
                     </div><!--/.item-->
                     <div class="item">
-                        <img src="assets/image/clients/cl_3.png" alt="brand-image" />
+                        <img src="../assets/image/clients/cl_3.png" alt="brand-image" />
                     </div><!--/.item-->
                     <div class="item">
-                        <img src="assets/image/clients/cl_4.png" alt="brand-image" />
+                        <img src="../assets/image/clients/cl_4.png" alt="brand-image" />
                     </div><!--/.item-->
                     <div class="item">
-                        <img src="assets/image/clients/cl_5.png" alt="brand-image" />
+                        <img src="../assets/image/clients/cl_5.png" alt="brand-image" />
                     </div><!--/.item-->
                     <div class="item">
-                        <img src="assets/image/clients/cl_6.png" alt="brand-image" />
+                        <img src="../assets/image/clients/cl_6.png" alt="brand-image" />
                     </div><!--/.item-->
                     <div class="item">
-                        <img src="assets/image/clients/cl_7.png" alt="brand-image" />
+                        <img src="../assets/image/clients/cl_7.png" alt="brand-image" />
                     </div><!--/.item-->
                     <div class="item">
-                        <img src="assets/image/clients/cl_8.png" alt="brand-image" />
+                        <img src="../assets/image/clients/cl_8.png" alt="brand-image" />
                     </div><!--/.item-->
                     <div class="item">
-                        <img src="assets/image/clients/cl_9.png" alt="brand-image" />
+                        <img src="../assets/image/clients/cl_9.png" alt="brand-image" />
                     </div><!--/.item-->
 
                 </div><!--/.owl-carousel-->
@@ -799,17 +797,17 @@
     </div> <!-- end of page footer -->
 
     <!-- core  -->
-    <script src="assets/vendors/jquery/jquery-3.4.1.js"></script>
-    <script src="assets/vendors/bootstrap/bootstrap.bundle.js"></script>
+    <script src="../assets/vendors/jquery/jquery-3.4.1.js"></script>
+    <script src="../assets/vendors/bootstrap/bootstrap.bundle.js"></script>
 
     <!-- bootstrap 3 affix -->
-    <script src="assets/vendors/bootstrap/bootstrap.affix.js"></script>
+    <script src="../assets/vendors/bootstrap/bootstrap.affix.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
 
     <!-- Sainu js -->
-    <script src="./assets/js/sainu.js"></script>
+    <script src="../assets/js/sainu.js"></script>
 
     <script>
         function navigateTo(sectionId) {
